executable(
    'ex1',
    'ex1.cpp',
    include_directories: adevs, link_with: adevs_lib
)

executable(
    'ex2',
    'ex2.cpp',
    include_directories: adevs, link_with: adevs_lib
)

executable(
    'ex3',
    'ex3.cpp',
    include_directories: adevs, link_with: adevs_lib
)

executable(
    'ex4',
    'ex4.cpp',
    include_directories: adevs, link_with: adevs_lib
)

executable(
    'ex5',
    'ex5.cpp',
    include_directories: adevs, link_with: adevs_lib, dependencies: [sundials_dep]
)
