test_dyn_devs_add = executable('add_test', ['SimpleAtomic.cpp', 'add_test.cpp'], include_directories: adevs)
test('dyn_devs_add', test_dyn_devs_add)

# test_dyn_devs_remove = executable('remove_test', ['SimpleAtomic.cpp', 'remove_test.cpp'], include_directories: adevs)
# test('dyn_devs_remove', test_dyn_devs_remove)

# test_dyn_devs_moved = executable('moved_test', ['SimpleAtomic.cpp', 'moved_test.cpp'], include_directories: adevs)
# test('dyn_devs_moved', test_dyn_devs_moved)

# test_dyn_devs_complex = executable('complex_test', ['SimpleAtomic.cpp', 'complex_test.cpp'], include_directories: adevs)
# test('dyn_devs_complex', test_dyn_devs_complex)
