#test_x1 = executable('x1', 'xtest1.cpp', include_directories: adevs)
#test_x1_ok = fs.copyfile('test1x.ok')
#test('gcd-x1', compare, args: [test_x1, test_x1_ok])

#test_x2 = executable('x2', 'xtest2.cpp', include_directories: adevs)
#test_x2_ok = fs.copyfile('test2x.ok')
#test('gcd-x2', compare, args: [test_x2.full_path(), test_x2_ok.full_path()])

test_t1 = executable('t1', 'test1.cpp', include_directories: adevs)
test_t1_ok = fs.copyfile('test1.ok')
test('gcd-t1', run_and_compare, args: [test_t1, test_t1_ok])

test_t2 = executable('t2', 'test2.cpp', include_directories: adevs)
test_t2_ok = fs.copyfile('test2.ok')
test('gcd-t2', compare, args: [test_t2, test_t2_ok])

test_t3 = executable('t3', 'test3.cpp', include_directories: adevs)
test_t3_ok = fs.copyfile('test3.ok')
test('gcd-t3', compare, args: [test_t3, test_t3_ok])

test_t4 = executable('t4', 'test4.cpp', include_directories: adevs)
test_t4_ok = fs.copyfile('test4.ok')
test('gcd-t4', compare, args: [test_t4, test_t4_ok])

test_t5 = executable('t5', 'test5.cpp', include_directories: adevs)
test_t5_ok = fs.copyfile('test5.ok')
test('gcd-t5', compare, args: [test_t5, test_t5_ok])

test_t6 = executable('t6', 'test6.cpp', include_directories: adevs)
test_t6_ok = fs.copyfile('test6.ok')
test('gcd-t6', compare, args: [test_t6, test_t6_ok])

test_t7 = executable('t7', 'test7.cpp', include_directories: adevs)
test_t7_ok = fs.copyfile('test7.ok')
test('gcd-t7', compare, args: [test_t7, test_t7_ok])

test_t8 = executable('t8', 'test8.cpp', include_directories: adevs)
test_t8_ok = fs.copyfile('test8.ok')
test('gcd-t8', compare, args: [test_t8, test_t8_ok])
