test_t1 = executable('t1', 'case1.cpp', include_directories: adevs)
test_t1_ok = fs.copyfile('test1.ok')
test('tokenring-t1', compare, args: [test_t1, test_t1_ok])

test_t1a = executable('t1a', 'case1a.cpp', include_directories: adevs)
test('tokenring-t1a', compare, args: [test_t1a, test_t1_ok])

test_t2 = executable('t2', 'case2.cpp', include_directories: adevs)
test_t2_ok = fs.copyfile('test2.ok')
test('tokenring-t2', compare, args: [test_t2, test_t2_ok])

test_t3 = executable('t3', 'case3.cpp', include_directories: adevs)
test_t3_ok = fs.copyfile('test3.ok')
test('tokenring-t3', compare, args: [test_t3, test_t3_ok])

test_t4 = executable('t4', 'case4.cpp', include_directories: adevs)
test_t4_ok = fs.copyfile('test4.ok')
test('tokenring-t4', compare, args: [test_t4, test_t4_ok])

test_t5 = executable('t5', 'case5.cpp', include_directories: adevs)
test_t5_ok = fs.copyfile('test5.ok')
test('tokenring-t5', compare, args: [test_t5, test_t5_ok])

test_t6 = executable('t6', 'case6.cpp', include_directories: adevs)
test_t6_ok = fs.copyfile('test6.ok')
test('tokenring-t6', compare, args: [test_t6, test_t6_ok])

test_t7 = executable('t7', 'case7.cpp', include_directories: adevs)
test_t7_ok = fs.copyfile('test7.ok')
test('tokenring-t7', compare, args: [test_t7, test_t7_ok])
